--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,7 +3,7 @@ location __PATH__/ {
 
   proxy_pass        http://127.0.0.1:__PORT__;
   proxy_redirect    off;
-  proxy_set_header  Host $host;
+  proxy_set_header  Host $http_host;
   proxy_set_header  X-Real-IP $remote_addr;
   proxy_set_header  X-Forwarded-Proto $scheme;
   proxy_set_header  X-Forwarded-For $remote_addr;
